--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Tiro+Tamil&family=Unna:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="wrapper">
+        <span>&#128216;</span>
+        <span>&#128215;</span>
+        <span>&#128212;</span>
+        <span>&#128214;</span>
+        <span>&#128217;</span>
+        <span>&#128395;</span>
+        <span>&#128393;</span>
+        <span>&#128204;</span>
+        <span>&#128187;</span>
+        <span>&#128206;</span>
+    </div>
+    
     <div class="navbar">
         <h1>Booksky</h1>
     </div>
